[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tempest-smoke-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tempest",
    "pydantic",
    "manila-tempest-plugin",
    "octavia-tempest-plugin",
    "zun-tempest-plugin",
    "blazar-tempest-plugin @ git+https://github.com/chameleoncloud/chi-blazar-tempest-plugin"
]

[project.optional-dependencies]
dev = []



[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
